--- a/manifest.json
+++ b/manifest.json
@@ -21,5 +21,5 @@
     "background": {
         "service_worker": "src/background.js"
     },
-    "permissions": ["tabs"]
+    "permissions": ["tabs", "storage"]
   }
