Added alert system + Added button to immediately block current tab URL
- Added toastAlertSystem.js, which contains a simple alert system that produces messages that appear as toast and disappear after a while and/or can be dismissed manually. Imported this as module into popup.js, had to adjust the manifest to make this work.
- Added a button to the main popup page that immediately blocks the current tab url if it is valid, or displays an error (with the new alert system) if it's not.
- Added a helper.js file that contains helper functions and can be imported.
- Refactored the way urls are added and removed from the blocked list. Previously, I used the index to identify the url (to use it as id for html elements, ...). This obviously does not work, because if I remove the first url and then add a new one the last two urls will use the same id. Hence I switched to using hashes as ID, since every added URL will have a guaranteed unique hash (because no two URL objects are allowed to be the same).

--- a/manifest.json
+++ b/manifest.json
@@ -18,8 +18,10 @@
           "128": "src/images/icon/icon-128.png"
         }
     },
+    "minimum_chrome_version": "92",
     "background": {
-        "service_worker": "src/background.js"
+        "service_worker": "src/background.js",
+        "type": "module"
     },
     "permissions": ["tabs", "storage"]
   }
