Refactored the front-end code
- Separated the code in the popup.js file into the following modules:
- blockedUrlList which contains all the code that adds and removes URLs from the blocked list.
- customRedirect which contains the code that modifies the custom redirect URLs.
-  reorganized the folder structure of the project. Updated all of the paths in the files.

--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
     },
     "minimum_chrome_version": "92",
     "background": {
-        "service_worker": "src/background.js",
+        "service_worker": "src/service_worker/background.js",
         "type": "module"
     },
     "permissions": ["tabs", "storage"]
